新增用户更换头像和用户信息功能,实现发布功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     compile 'cn.bmob.android:http-legacy:1.0'
     //短信
     compile 'cn.bmob.android:bmob-sms:1.0.1'
+
+    //圆形头像
+    compile 'de.hdodenhof:circleimageview:2.0.0'
+
 }
